--- a/Changeling/MainWindow.xaml
+++ b/Changeling/MainWindow.xaml
@@ -7,14 +7,13 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <ListBox ItemsSource="{Binding Path=Files}" Name="DropBox" HorizontalAlignment="Left" Height="215" Margin="10,64,0,0" VerticalAlignment="Top" Width="187" AllowDrop="True" Drop="DropBox_Drop" DragOver="DropBox_DragOver" DragLeave="DropBox_DragLeave" FontFamily="Segoe UI Light"/>
-        <ListBox Name="trackedChanges" HorizontalAlignment="Left" Height="215" Margin="212,64,0,0" VerticalAlignment="Top" Width="168"/>
+        <ListBox ItemsSource="{Binding Path=Files}" Name="DropBox" HorizontalAlignment="Left" Height="215" Margin="10,64,0,0" VerticalAlignment="Top" Width="156" AllowDrop="True" Drop="DropBox_Drop" DragOver="DropBox_DragOver" DragLeave="DropBox_DragLeave" FontFamily="Segoe UI Light" KeyDown="list_DelKey" SelectionMode="Extended"/>
+        <ListBox Name="trackedChanges" HorizontalAlignment="Left" Height="215" Margin="171,64,0,0" VerticalAlignment="Top" Width="336"/>
         <Button x:Name="btn_addToMonitoredFolders" Content="Add..." HorizontalAlignment="Left" Margin="10,284,0,0" VerticalAlignment="Top" Width="75" IsDefault="True"/>
-        <Button x:Name="btn_trackedChangesClear" Content="Clear" HorizontalAlignment="Left" Margin="260,284,0,0" VerticalAlignment="Top" Width="75" Click="btn_trackedChangesClear_Click"/>
-        <Button x:Name="btn_preferences" Content="Settings" HorizontalAlignment="Left" Margin="416,64,0,0" VerticalAlignment="Top" Width="75"/>
-        <Label Content="Monitored Folders" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,33,0,0"/>
-        <Label Content="Tracked Changes" HorizontalAlignment="Left" Margin="212,38,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btn_removeFromMonitoredFolders" Content="Remove" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="122,284,0,0" Click="btn_removeFromMonitoredFolders_Click"/>
+        <Button x:Name="btn_trackedChangesClear" Content="Clear" HorizontalAlignment="Left" Margin="432,284,0,0" VerticalAlignment="Top" Width="75" Click="btn_trackedChangesClear_Click"/>
+        <Label Content="Monitored Folders" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,38,0,0"/>
+        <Label Content="Tracked Changes" HorizontalAlignment="Left" Margin="171,38,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btn_removeFromMonitoredFolders" Content="Remove" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="91,284,0,0" Click="btn_removeFromMonitoredFolders_Click" RenderTransformOrigin="0.156,0.5"/>
 
     </Grid>
 </Window>
