--- a/Changeling/MainWindow.xaml
+++ b/Changeling/MainWindow.xaml
@@ -5,15 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Changeling"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="ChangeLing" Height="350" Width="525" Topmost="True">
     <Grid>
-        <ListBox ItemsSource="{Binding Path=Files}" Name="DropBox" HorizontalAlignment="Left" Height="215" Margin="10,64,0,0" VerticalAlignment="Top" Width="156" AllowDrop="True" Drop="DropBox_Drop" DragOver="DropBox_DragOver" DragLeave="DropBox_DragLeave" FontFamily="Segoe UI Light" KeyDown="list_DelKey" SelectionMode="Extended"/>
-        <ListBox Name="trackedChanges" HorizontalAlignment="Left" Height="215" Margin="171,64,0,0" VerticalAlignment="Top" Width="336"  MouseDoubleClick="list_MouseDoubleClick"/>
-        <Button x:Name="btn_addToMonitoredFolders" Content="Add..." HorizontalAlignment="Left" Margin="10,284,0,0" VerticalAlignment="Top" Width="75" IsDefault="True"/>
-        <Button x:Name="btn_trackedChangesClear" Content="Clear" HorizontalAlignment="Left" Margin="432,284,0,0" VerticalAlignment="Top" Width="75" Click="btn_trackedChangesClear_Click"/>
-        <Label Content="Monitored Folders" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,38,0,0"/>
-        <Label Content="Tracked Changes" HorizontalAlignment="Left" Margin="171,38,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btn_removeFromMonitoredFolders" Content="Remove" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="91,284,0,0" Click="btn_removeFromMonitoredFolders_Click" RenderTransformOrigin="0.156,0.5"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="53*"/>
+            <ColumnDefinition Width="464*"/>
+        </Grid.ColumnDefinitions>
+        <ListBox ItemsSource="{Binding Path=Files}" Name="DropBox" HorizontalAlignment="Left" Height="215" Margin="10,64,0,0" VerticalAlignment="Top" Width="156" AllowDrop="True" Drop="DropBox_Drop" DragOver="DropBox_DragOver" DragLeave="DropBox_DragLeave" FontFamily="Segoe UI Light" KeyDown="list_DelKey" SelectionMode="Extended" Grid.ColumnSpan="2">
+
+        </ListBox>
+        <ListBox Name="trackedChanges" HorizontalAlignment="Left" Height="215" Margin="118.366,64,0,0" VerticalAlignment="Top" Width="336"  MouseDoubleClick="list_MouseDoubleClick" Grid.Column="1"/>
+        <Button x:Name="btn_addToMonitoredFolders" Content="Add..." HorizontalAlignment="Left" Margin="10,284,0,0" VerticalAlignment="Top" Width="75" IsDefault="True" Grid.ColumnSpan="2"/>
+        <Button x:Name="btn_trackedChangesClear" Content="Clear" HorizontalAlignment="Left" Margin="379.366,284,0,0" VerticalAlignment="Top" Width="75" Click="btn_trackedChangesClear_Click" Grid.Column="1"/>
+        <Label Content="Monitored Folders" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,38,0,0" Grid.ColumnSpan="2"/>
+        <Label Content="Tracked Changes" HorizontalAlignment="Left" Margin="118.366,38,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <Button x:Name="btn_removeFromMonitoredFolders" Content="Remove" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="38.366,284,0,0" Click="btn_removeFromMonitoredFolders_Click" RenderTransformOrigin="0.156,0.5" Grid.Column="1"/>
 
     </Grid>
 </Window>
