--- a/Changeling/MainWindow.xaml
+++ b/Changeling/MainWindow.xaml
@@ -8,18 +8,27 @@
         Title="ChangeLing" Height="350" Width="525" Topmost="True">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="53*"/>
-            <ColumnDefinition Width="464*"/>
+            <ColumnDefinition Width="59*"/>
+            <ColumnDefinition Width="458*"/>
         </Grid.ColumnDefinitions>
-        <ListBox ItemsSource="{Binding Path=Files}" Name="DropBox" HorizontalAlignment="Left" Height="215" Margin="10,64,0,0" VerticalAlignment="Top" Width="156" AllowDrop="True" Drop="DropBox_Drop" DragOver="DropBox_DragOver" DragLeave="DropBox_DragLeave" FontFamily="Segoe UI Light" KeyDown="list_DelKey" SelectionMode="Extended" Grid.ColumnSpan="2">
+        <ListBox ItemsSource="{Binding Path=Files}" Name="DropBox" HorizontalAlignment="Left" Height="219" Margin="10,41,0,0" VerticalAlignment="Top" Width="108" AllowDrop="True" Drop="DropBox_Drop" DragOver="DropBox_DragOver" DragLeave="DropBox_DragLeave" FontFamily="Segoe UI Light" KeyDown="list_DelKey" SelectionMode="Extended" Grid.ColumnSpan="2">
 
         </ListBox>
-        <ListBox Name="trackedChanges" HorizontalAlignment="Left" Height="215" Margin="118.366,64,0,0" VerticalAlignment="Top" Width="336"  MouseDoubleClick="list_MouseDoubleClick" Grid.Column="1"/>
-        <Button x:Name="btn_addToMonitoredFolders" Content="Add..." HorizontalAlignment="Left" Margin="10,284,0,0" VerticalAlignment="Top" Width="75" IsDefault="True" Grid.ColumnSpan="2"/>
-        <Button x:Name="btn_trackedChangesClear" Content="Clear" HorizontalAlignment="Left" Margin="379.366,284,0,0" VerticalAlignment="Top" Width="75" Click="btn_trackedChangesClear_Click" Grid.Column="1"/>
-        <Label Content="Monitored Folders" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,38,0,0" Grid.ColumnSpan="2"/>
-        <Label Content="Tracked Changes" HorizontalAlignment="Left" Margin="118.366,38,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-        <Button x:Name="btn_removeFromMonitoredFolders" Content="Remove" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="38.366,284,0,0" Click="btn_removeFromMonitoredFolders_Click" RenderTransformOrigin="0.156,0.5" Grid.Column="1"/>
+        <ListBox Name="trackedChanges" HorizontalAlignment="Left" Height="219" Margin="64,41,0,0" VerticalAlignment="Top" Width="153"  MouseDoubleClick="list_MouseDoubleClick" Grid.Column="1"/>
+        <Button x:Name="btn_addToMonitoredFolders" Content="Add..." HorizontalAlignment="Left" Margin="11,265,0,0" VerticalAlignment="Top" Width="75" IsDefault="True" Grid.ColumnSpan="2" Height="20" RenderTransformOrigin="0.533,1.35"/>
+        <Button x:Name="btn_trackedChangesClear" Content="Clear" HorizontalAlignment="Left" Margin="142,265,0,0" VerticalAlignment="Top" Width="75" Click="btn_trackedChangesClear_Click" Grid.Column="1" Height="20"/>
+        <Label Content="Monitored Folders" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0" Grid.ColumnSpan="2" Height="26" Width="108" FontWeight="Bold"/>
+        <Label Content="Tracked Changes" HorizontalAlignment="Left" Margin="64,10,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="153" FontWeight="Bold"/>
+        <Button x:Name="btn_removeFromMonitoredFolders" Content="Remove" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="11,290,0,0" Click="btn_removeFromMonitoredFolders_Click" RenderTransformOrigin="0.156,0.5" Height="20" Grid.ColumnSpan="2"/>
+        <PasswordBox x:Name="EmailPasswordBox" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="298,107,0,0" Width="139" Height="23" Password="Password" Grid.Column="1"/>
+        <TextBox x:Name="EmailTextBox" HorizontalAlignment="Left" Height="26" TextWrapping="Wrap" VerticalAlignment="Top" Width="139" Margin="298,79,0,0" Grid.Column="1" AutomationProperties.HelpText="mock@test.com"/>
+        <Button x:Name="EmailActivateButton" Content="Activate" Grid.Column="1" HorizontalAlignment="Left" Margin="281,240,0,0" VerticalAlignment="Top" Width="75" Click="EmailActivateButton_Click"/>
+        <Slider x:Name="NotificationFrequencySlider" HorizontalAlignment="Left" VerticalAlignment="Top" Width="139" Margin="227,162,0,0" TickPlacement="BottomRight" SmallChange="1" Minimum="1" Grid.Column="1"/>
+        <Label Content="Notification Settings" HorizontalAlignment="Left" Margin="222,10,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="167" FontWeight="Bold"/>
+        <Label Content="Email" Grid.Column="1" HorizontalAlignment="Left" Margin="226,80,0,0" VerticalAlignment="Top" Width="71"/>
+        <Label Content="Password" Grid.Column="1" HorizontalAlignment="Left" Margin="227,106,0,0" VerticalAlignment="Top" Width="71"/>
+        <Label Content="Frequency" Grid.Column="1" HorizontalAlignment="Left" Margin="227,130,0,0" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.493,1.885"/>
+        <Label Content="Label" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
